(minor) url reverse to dashboard

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -33,7 +33,7 @@ html(ng-app="abelujo")
       div.navbar-collapse
         ul.nav.navbar-nav
           li.active(href="#")
-            a(href="/") Abelujo
+            a(href='{% url "dashboard" %}') Abelujo
         ul.nav.navbar-nav.navbar-right
           li
            span
