--- a/templates/search/inventory_view.jade
+++ b/templates/search/inventory_view.jade
@@ -44,6 +44,7 @@ div(ng-controller="inventoryNewController")
          btn.btn.btn-primary(ng-click="save()") Save
 
     .row
+     .col-lg-9
       p.input-group
           input.nullable.form-control(
             type='text'
@@ -61,16 +62,20 @@ div(ng-controller="inventoryNewController")
             button.btn.btn-default(type='button')
               i.glyphicon.glyphicon-refresh
 
+     .col-lg-3
 
-  h4.ng-cloak(ng-show="cards_selected.length")
+        input(type="checkbox", ng-model="showAll", ng-change="toggleShowAll()")
+        span {% trans "Show all cards inventoried" %}
+
+  h4.ng-cloak(ng-show="cards_to_show.length")
     {% verbatim %} {{ getTotalCopies() }} {% endverbatim %} {% trans "titles selected." %}
-  div(ng-cloak, ng-show="cards_selected", ng-repeat="card in cards_selected.reverse()")
+  div(ng-cloak, ng-show="cards_to_show", ng-repeat="card in cards_to_show.reverse()")
     div
      .col-md-9
       a(href="{% verbatim %} {{ card.details_url }} {% endverbatim %}") {% verbatim %} {{card.title}} {% endverbatim %}
       span {% verbatim %} {{card.authors_repr}} {% endverbatim %}
       i.glyphicon.glyphicon-warning-sign(
-        ng-show="{% verbatim %} cards_selected[$index].ambiguous_sell {% endverbatim %}"
+        ng-show="{% verbatim %} cards_to_show[$index].ambiguous_sell {% endverbatim %}"
         title="{% trans 'There is a conflict with deposits.' %}")
       i.glyphicon.glyphicon-exclamation-s
 
@@ -80,7 +85,7 @@ div(ng-controller="inventoryNewController")
             span.input-group-addon X
             input.form-control(
                 type="number", min=0, max=99
-                ng-model="{% verbatim %} cards_selected[$index].quantity {% endverbatim %}"
+                ng-model="{% verbatim %} cards_to_show[$index].quantity {% endverbatim %}"
                 ng-change="{% verbatim %} updateTotalPrice() {% endverbatim %}"
             )
 
