--- a/templates/search/dashboard.jade
+++ b/templates/search/dashboard.jade
@@ -21,6 +21,7 @@
 {% load bootstrap3 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
+{% load ngfilter %}
 
 h3 {% trans "Abelujo's dashboard" %}
 div (We'll add more stats soon)
