--- a/templates/search/card_edit.jade
+++ b/templates/search/card_edit.jade
@@ -21,6 +21,7 @@
 {% load bootstrap3 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
+{% load ngfilter %}
 
 h3 {% trans "Card" %}
 div.ng-cloak(ng-controller="cardCreateController", ng-show="ready")
@@ -28,11 +29,11 @@ div.ng-cloak(ng-controller="cardCreateController", ng-show="ready")
  div
     alert(
       ng-repeat="alert in alerts"
-      type="{% verbatim %} {{alert.level}} {% endverbatim %}"
+      type="{{ 'alert.level' | ng }}"
       close="closeAlert($item)"
       ng-click="closeAlert($item)"
     )
-      {% verbatim %} {{alert.message}} {% endverbatim %}
+      {{ 'alert.message' | ng }}
 
  form(ng-show="card")
   .row
@@ -81,8 +82,8 @@ div.ng-cloak(ng-controller="cardCreateController", ng-show="ready")
                 i.glyphicon.glyphicon-plus-sign
 
          span(ng-repeat="auth in authors_selected")
-          //- div {% verbatim %} {{ auth.name }} {% endverbatim %}
-          span {% verbatim %} {{ auth.fields.name }} {% endverbatim %}
+          //- div {{ 'auth.name ' | ng }}
+          span {{ 'auth.fields.name ' | ng }}
             i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index, 'authors_selected')")
 
 
@@ -99,13 +100,13 @@ div.ng-cloak(ng-controller="cardCreateController", ng-show="ready")
             i.glyphicon.glyphicon-plus-sign
 
         span(ng-repeat="pub in pubs_selected")
-          span {% verbatim %} {{ pub.fields.name }} {% endverbatim %}
+          span {{ 'pub.fields.name ' | ng }}
             i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index, 'pubs_selected')")
 
         div
           span
             h5 {% trans "Distributor" %}:
-              span {% verbatim %} {{ distributor.repr }} {% endverbatim %}
+              span {{ 'distributor.repr ' | ng }}
         div
 
           ui-select(ng-model="distributor.selected")
