--- a/templates/search/card_move.jade
+++ b/templates/search/card_move.jade
@@ -22,6 +22,7 @@
 {% load bootstrap3 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
+{% load ngfilter %}
 
 form(method='post', action="{% url 'card_move' pk %}")
   {% csrf_token %}
