--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -23,6 +23,7 @@
 {% load bootstrap3 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
+{% load ngfilter %}
 
 h3 {% trans "Search in the stock" %}
 
