--- a/templates/search/deposits.jade
+++ b/templates/search/deposits.jade
@@ -23,6 +23,7 @@
 {% load bootstrap3 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
+{% load ngfilter %}
 
 if  depo_pubtype
   h3 Dépots externes
