--- a/templates/search/inventories.jade
+++ b/templates/search/inventories.jade
@@ -23,7 +23,7 @@
 {% load bootstrap3 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
-
+{% load ngfilter %}
 
 h3 {% trans "Inventory started" %}
 table.table.table-striped.table-hover
@@ -50,8 +50,8 @@ div(ng-controller="InventoryModalController")
       h3.modal-title {% trans "What place are you doing the inventory of ?" %}
 
     div.modal-body
-      //- div {% verbatim %} {{ items }} {% endverbatim %}
-      //- div {% verbatim %} {{ item.name }} {% endverbatim %}
+      //- div {{ 'items ' | ng }}
+      //- div {{ 'item.name ' | ng }}
       form.form-inline
         select.form-control(ng-model="place", ng-options="it.name for it in items", required)
         button.btn.btn-primary(ng-click="ok()") Ok
