--- a/templates/search/card_add.jade
+++ b/templates/search/card_add.jade
@@ -29,7 +29,7 @@ div.ng-cloak(ng-controller="cardAddController")
   .row
     table
       tr
-        td.my-narrow {% trans "collection" %}
+        td.my-narrow {% trans "category" %}
         td: select(ng-model="category", ng-options="it.fields.name for it in categories")
     table
       tr
